<resources>
    <string name="app_name">Collapsius</string>
    <string name="classic">classic</string>
    <string name="mode1">mode1</string>
    <string name="mode2">mode2</string>
    <string name="mode3">mode3</string>
    <string name="mode4">mode4</string>
    <string name="CL_field_configuration">CL_field_configuration</string>
    <string name="_numberofplayers">Количество игроков</string>
    <string name="_choosemode">Выбор режима</string>
    <string name="Settings">Settings</string>
    <string name="_choosemap">Выберите карту</string>
    <string name="map1">map1</string>
    <string name="map2">map2</string>
    <string name="map3">map3</string>
    <string name="map4">map4</string>
    <string name="map5">map5</string>
    <string name="map6">map6</string>
    <string name="_next">Далее</string>
    <string name="_1">1</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_11">11</string>
    <string name="_9">9</string>
    <string name="_12">12</string>
    <string name="_13">13</string>
    <string name="_14">14</string>
    <string name="_15">15</string>
    <string name="_16">16</string>
    <string name="_10">10</string>
    <string name="_19">19</string>
    <string name="_17">17</string>
    <string name="_20">20</string>
    <string name="_21">21</string>
    <string name="_22">22</string>
    <string name="_23">23</string>
    <string name="_24">24</string>
    <string name="_27">27</string>
    <string name="_25">25</string>
    <string name="_28">28</string>
    <string name="_29">29</string>
    <string name="_30">30</string>
    <string name="_31">31</string>
    <string name="_32">32</string>
    <string name="_26">26</string>
    <string name="_18">18</string>
    <string name="_33">33</string>
    <string name="_34">34</string>
    <string name="_35">35</string>
    <string name="_36">36</string>
    <string name="_37">37</string>
    <string name="_38">38</string>
    <string name="_39">39</string>
    <string name="_40">40</string>
    <string name="_41">41</string>
    <string name="_42">42</string>
    <string name="_43">43</string>
    <string name="_44">44</string>
    <string name="_45">45</string>
    <string name="_46">46</string>
    <string name="_47">47</string>
    <string name="_48">48</string>
    <string name="_64">64</string>
    <string name="_63">63</string>
    <string name="_62">62</string>
    <string name="_61">61</string>
    <string name="_60">60</string>
    <string name="_59">59</string>
    <string name="_58">58</string>
    <string name="_57">57</string>
    <string name="_56">56</string>
    <string name="_55">55</string>
    <string name="_54">54</string>
    <string name="_53">53</string>
    <string name="_52">52</string>
    <string name="_51">51</string>
    <string name="_50">50</string>
    <string name="_49">49</string>
    <string name="_bt_back1">Назад</string>
    <string name="_bt_back2">Назад</string>
    <string name="_NewGame">Новая Игра</string>
    <string name="_Settings">Settings</string>
    <string name="_play">play</string>
    <string name="_settings">settings</string>
    <string name="_logo">logo</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="bt_2players">bt_2players</string>
    <string name="bt_3players">bt_3players</string>
    <string name="bt_4players">bt_4players</string>
    <string name="allsettings">allsettings</string>
    <string name="back_to_menu">back_to_menu</string>
    <string name="Back">Назад</string>
    <string name="_00_00">00:00</string>
    <string name="bt_back2">bt_back2</string>
    <string name="_00">00</string>
    <string name="CL_configuration_editable">CL_configuration_editable</string>

</resources>