<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/CL_mainMenu"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back__xz"
    tools:context=".MainActivity">


    <ImageButton
        android:id="@+id/Settings"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="93dp"
        android:layout_marginBottom="76dp"
        android:background="@drawable/set"
        android:contentDescription="@string/_Settings"
        android:translationY="3dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="ImageContrastCheck" />

    <ImageButton
        android:id="@+id/NewGame"
        style="@android:style/Widget.ImageButton"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginStart="165dp"
        android:layout_marginBottom="79dp"
        android:background="#00FFFFFF"
        android:contentDescription="@string/_NewGame"
        android:scaleType="centerInside"
        android:scaleX="0.7"
        android:scaleY="0.7"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
<<<<<<< HEAD
=======
        android:id="@+id/imageView2"
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="12dp"
        android:contentDescription="@string/_play"
        android:translationX="5dp"
        app:layout_constraintEnd_toEndOf="@+id/NewGame"
        app:layout_constraintTop_toTopOf="@+id/NewGame"
        app:srcCompat="@drawable/a06104" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="9dp"
        android:contentDescription="@string/_settings"
        android:translationX="1dp"
        android:translationY="2dp"
        app:layout_constraintEnd_toEndOf="@+id/Settings"
        app:layout_constraintTop_toTopOf="@+id/Settings"
        app:srcCompat="@drawable/a63074" />

    <ImageView
>>>>>>> 93da46158f56d718fa8f5913e25d91a770555406
        android:id="@+id/imageView4"
        android:layout_width="300dp"
        android:layout_height="176dp"
        android:layout_marginTop="180dp"
        android:contentDescription="@string/_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo"
        tools:ignore="ImageContrastCheck" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="80dp"
        android:layout_height="81dp"
        app:layout_constraintBottom_toBottomOf="@+id/imageButton"
        app:layout_constraintEnd_toEndOf="@+id/imageButton"
        app:layout_constraintStart_toStartOf="@+id/imageButton"
        app:layout_constraintTop_toTopOf="@+id/imageButton"
        app:srcCompat="@drawable/play" />

</androidx.constraintlayout.widget.ConstraintLayout>